Terraform/instances.tf
resource "aws_instance" "example" {
  count         = 2
  ami           = var.ami_id
  instance_type = var.instance_type
  key_name = var.key_name
  vpc_security_group_ids = [aws_security_group.allow_ssh.id]

  tags = {
    Name = "Instance ${count.index + 1}"
  }
}
